--- a/PaperZee/package.json
+++ b/PaperZee/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^0.11.21",
+    "@loadable/component": "^5.12.0",
     "@react-native-community/hooks": "^2.4.8",
     "@react-native-community/masked-view": "0.1.6",
     "@react-navigation/bottom-tabs": "^5.2.7",
