--- a/PaperZee/package.json
+++ b/PaperZee/package.json
@@ -26,6 +26,7 @@
     "fast-json-stable-stringify": "^2.1.0",
     "i18next": "^19.4.3",
     "moment": "^2.25.3",
+    "moment-timezone": "^0.5.31",
     "react": "16.9.0",
     "react-dom": "16.9.0",
     "react-google-maps": "^9.4.5",
