--- a/FlameZee/firebase.json
+++ b/FlameZee/firebase.json
@@ -63,6 +63,14 @@
           "function": "user_details_v1"
         },
         {
+          "source": "/user/clan",
+          "function": "user_clan_v1"
+        },
+        {
+          "source": "/user/clan/v1",
+          "function": "user_clan_v1"
+        },
+        {
           "source": "/user/activity",
           "function": "user_activity_v1"
         },
@@ -89,6 +97,14 @@
         {
           "source": "/user/specials/v1",
           "function": "user_specials_v1"
+        },
+        {
+          "source": "/user/quest",
+          "function": "user_quest_v1"
+        },
+        {
+          "source": "/user/quest/v1",
+          "function": "user_quest_v1"
         },
         {
           "source": "/user/search",
@@ -147,12 +163,16 @@
           "function": "clan_details_v1"
         },
         {
+          "source": "/munzee/deploytime",
+          "function": "munzee_deploytime"
+        },
+        {
           "source": "/bingo",
           "function": "bingo"
         },
         {
           "source": "**",
-          "destination": "/index.html"
+          "function": "api"
         }
       ]
     },
