--- a/FlameZee/functions/package.json
+++ b/FlameZee/functions/package.json
@@ -22,6 +22,7 @@
     "moment-timezone": "^0.5.28",
     "needle": "^2.3.3",
     "object.fromentries": "^2.0.2",
+    "offline-geocoder": "^1.0.0",
     "rss-parser": "^3.7.6",
     "spherical": "^0.2.0"
   },
