--- a/FlameZee/firebase.json
+++ b/FlameZee/firebase.json
@@ -179,6 +179,10 @@
           "function": "bingo"
         },
         {
+          "source": "/authlog",
+          "function": "authlog"
+        },
+        {
           "source": "**",
           "function": "api"
         }
