--- a/FlameZee/functions/Utils/Config.example.json
+++ b/FlameZee/functions/Utils/Config.example.json
@@ -6,7 +6,8 @@
         "redirect_uri": "https://yoursite.com/auth"
     },
     "discord": {
-        "auth": "https://discordapp.com/api/webhooks/xxxxxxxxxxxxxxxxxx/..."
+        "auth": "https://discordapp.com/api/webhooks/xxxxxxxxxxxxxxxxxx/...",
+        "authV2": "https://discordapp.com/api/webhooks/xxxxxxxxxxxxxxxxxx/..."
     },
     "codes": {
         "xxxxxxxxxxx1": [0,1586592619074],
