Fix Build Number, Add message to Old PaperZee Link

--- a/FlameZee/firebase.json
+++ b/FlameZee/firebase.json
@@ -232,6 +232,21 @@
       ]
     },
     {
+      "target": "oldpaper",
+      "public": "oldpaper",
+      "ignore": [
+        "firebase.json",
+        "**/.*",
+        "**/node_modules/**"
+      ],
+      "rewrites": [
+        {
+          "source": "**",
+          "destination": "/index.html"
+        }
+      ]
+    },
+    {
       "target": "clan",
       "public": "clan",
       "ignore": [
