Add Custom Font, Fix Text Cut-off on some Androids

--- a/PaperZee/package.json
+++ b/PaperZee/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo-google-fonts/coiny": "^0.1.0",
     "@expo/webpack-config": "^0.11.21",
     "@loadable/component": "^5.12.0",
     "@react-native-community/hooks": "^2.4.8",
@@ -22,6 +23,7 @@
     "expo-auth-session": "^1.2.1",
     "expo-barcode-scanner": "~8.1.0",
     "expo-camera": "~8.2.0",
+    "expo-font": "~8.1.0",
     "expo-web-browser": "8.2.1",
     "fast-json-stable-stringify": "^2.1.0",
     "i18next": "^19.4.3",
