--- a/PaperZee/package.json
+++ b/PaperZee/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@expo-google-fonts/coiny": "^0.1.0",
+    "@expo-google-fonts/roboto": "^0.1.0",
     "@expo/webpack-config": "^0.11.21",
     "@loadable/component": "^5.12.0",
     "@react-native-community/hooks": "^2.4.8",
