Munzee Types Pages

--- a/PaperZee/package.json
+++ b/PaperZee/package.json
@@ -27,6 +27,7 @@
     "expo-font": "~8.1.0",
     "expo-web-browser": "8.2.1",
     "fast-json-stable-stringify": "^2.1.0",
+    "fuse.js": "^6.0.0",
     "i18next": "^19.4.3",
     "moment": "^2.25.3",
     "moment-timezone": "^0.5.31",
