--- a/FlameZee/functions/package.json
+++ b/FlameZee/functions/package.json
@@ -13,6 +13,7 @@
     "node": "8"
   },
   "dependencies": {
+    "cheerio": "^1.0.0-rc.3",
     "cors": "^2.8.5",
     "firebase-admin": "^8.0.0",
     "firebase-functions": "^3.0.0",
