Clan Groups, Minor Tweaks, Bug Fixes, Drawer Tweak

--- a/PaperZee/package.json
+++ b/PaperZee/package.json
@@ -23,6 +23,7 @@
     "expo": "^37.0.0",
     "expo-auth-session": "^1.2.1",
     "expo-barcode-scanner": "~8.1.0",
+    "expo-blur": "~8.1.0",
     "expo-camera": "~8.2.0",
     "expo-font": "~8.1.0",
     "expo-web-browser": "8.2.1",
@@ -36,16 +37,18 @@
     "react-google-maps": "^9.4.5",
     "react-i18next": "^11.3.5",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.0.tar.gz",
-    "react-native-flags": "^1.0.0",
+    "react-native-expo-image-cache": "^4.1.0",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-maps": "0.26.1",
     "react-native-paper": "^3.6.0",
     "react-native-reanimated": "~1.7.0",
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
+    "react-native-shared-element": "^0.7.0",
     "react-native-slider": "^0.11.0",
     "react-native-web": "^0.11.7",
     "react-native-webview": "8.1.1",
+    "react-navigation-shared-element": "^5.0.0-alpha1",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
