June 2020, Support, iOS App Work

--- a/FlameZee/firebase.json
+++ b/FlameZee/firebase.json
@@ -27,6 +27,10 @@
           "destination": "/cuppazeeprivacy.html"
         },
         {
+          "source": "/support",
+          "destination": "/cuppazeesupport.html"
+        },
+        {
           "source": "**",
           "function": "api"
         }
