--- a/FlameZee/functions/package.json
+++ b/FlameZee/functions/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
     "cors": "^2.8.5",
+    "expo-server-sdk": "^3.5.0",
     "firebase-admin": "^8.0.0",
     "firebase-functions": "^3.0.0",
     "fuse.js": "^5.1.0",
