--- a/FlameZee/functions/package.json
+++ b/FlameZee/functions/package.json
@@ -19,6 +19,7 @@
     "firebase-admin": "^8.0.0",
     "firebase-functions": "^3.0.0",
     "fuse.js": "^5.1.0",
+    "geo-tz": "^6.0.0",
     "js-yaml": "^3.13.1",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.28",
