Changelogs, New 20/20 Vision

--- a/PaperZee/package.json
+++ b/PaperZee/package.json
@@ -26,6 +26,7 @@
     "expo-blur": "~8.1.0",
     "expo-camera": "~8.2.0",
     "expo-font": "~8.1.0",
+    "expo-location": "~8.1.0",
     "expo-web-browser": "8.2.1",
     "fast-json-stable-stringify": "^2.1.0",
     "fuse.js": "^6.0.0",
