--- a/FlameZee/functions/package.json
+++ b/FlameZee/functions/package.json
@@ -27,6 +27,7 @@
     "moment-timezone": "^0.5.28",
     "needle": "^2.3.3",
     "node-fetch": "^2.6.0",
+    "nodemailer": "^6.4.8",
     "object.fromentries": "^2.0.2",
     "offline-geocoder": "^1.0.0",
     "rss-parser": "^3.7.6",
