Custom Level Colours, Auto FB Blog Posts

--- a/FlameZee/functions/config.example.json
+++ b/FlameZee/functions/config.example.json
@@ -14,5 +14,10 @@
       "user":"example@example.com",
       "pass":"password"
     }
+  },
+  "emails": {
+    "munzeeblog": [
+      "example@example.com"
+    ]
   }
 }
