--- a/PaperZee/package.json
+++ b/PaperZee/package.json
@@ -57,7 +57,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
-    "babel-preset-expo": "^8.1.0"
+    "babel-preset-expo": "^8.1.0",
+    "moment-locales-webpack-plugin": "^1.2.0"
   },
   "private": true
 }
