--- a/PaperZee/package.json
+++ b/PaperZee/package.json
@@ -12,6 +12,7 @@
     "@expo-google-fonts/roboto": "^0.1.0",
     "@expo/webpack-config": "^0.11.21",
     "@loadable/component": "^5.12.0",
+    "@react-google-maps/api": "^1.9.7",
     "@react-native-community/hooks": "^2.4.8",
     "@react-native-community/masked-view": "0.1.6",
     "@react-navigation/bottom-tabs": "^5.2.7",
