--- a/PaperZee/package.json
+++ b/PaperZee/package.json
@@ -10,11 +10,11 @@
   "dependencies": {
     "@expo-google-fonts/coiny": "^0.1.0",
     "@expo-google-fonts/roboto": "^0.1.0",
-    "@expo/webpack-config": "^0.11.21",
+    "@expo/webpack-config": "^0.12.16",
     "@loadable/component": "^5.12.0",
     "@react-google-maps/api": "^1.9.7",
     "@react-native-community/hooks": "^2.4.8",
-    "@react-native-community/masked-view": "0.1.6",
+    "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.2.7",
     "@react-navigation/drawer": "^5.5.0",
     "@react-navigation/material-bottom-tabs": "^5.1.9",
@@ -22,44 +22,46 @@
     "@react-navigation/stack": "^5.2.11",
     "@ungap/promise-all-settled": "^1.1.0",
     "axios": "^0.19.2",
-    "expo": "^37.0.12",
-    "expo-auth-session": "^1.2.1",
-    "expo-barcode-scanner": "~8.1.0",
-    "expo-blur": "~8.1.0",
-    "expo-camera": "~8.2.0",
-    "expo-font": "~8.1.0",
-    "expo-location": "~8.1.0",
-    "expo-web-browser": "8.2.1",
+    "expo": "^38.0.0",
+    "expo-auth-session": "~1.4.0",
+    "expo-barcode-scanner": "~8.2.1",
+    "expo-blur": "~8.1.2",
+    "expo-camera": "~8.3.1",
+    "expo-font": "~8.2.1",
+    "expo-location": "~8.2.1",
+    "expo-splash-screen": "~0.3.1",
+    "expo-web-browser": "~8.3.1",
     "fast-json-stable-stringify": "^2.1.0",
     "fuse.js": "^6.0.0",
     "i18next": "^19.4.3",
     "moment": "^2.25.3",
     "moment-timezone": "^0.5.31",
-    "react": "16.9.0",
-    "react-dom": "16.9.0",
+    "react": "16.11.0",
+    "react-dom": "16.11.0",
     "react-google-maps": "^9.4.5",
     "react-i18next": "^11.3.5",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.0.tar.gz",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.0.tar.gz",
     "react-native-expo-image-cache": "^4.1.0",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-map-clustering": "^3.3.9",
-    "react-native-maps": "0.26.1",
+    "react-native-maps": "0.27.1",
     "react-native-paper": "^3.6.0",
-    "react-native-reanimated": "~1.7.0",
-    "react-native-safe-area-context": "0.7.3",
-    "react-native-screens": "~2.2.0",
-    "react-native-shared-element": "^0.7.0",
+    "react-native-reanimated": "~1.9.0",
+    "react-native-safe-area-context": "3.0.2",
+    "react-native-screens": "~2.9.0",
+    "react-native-shared-element": "0.7.0",
     "react-native-slider": "^0.11.0",
-    "react-native-web": "^0.11.7",
-    "react-native-webview": "8.1.1",
+    "react-native-web": "~0.11.7",
+    "react-native-webview": "9.4.0",
     "react-navigation-shared-element": "^5.0.0-alpha1",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "supercluster": "^7.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
-    "babel-preset-expo": "^8.1.0",
+    "babel-preset-expo": "^8.2.3",
     "moment-locales-webpack-plugin": "^1.2.0",
     "webpack-bundle-analyzer": "^3.8.0"
   },
