Clan Req Poster

--- a/FlameZee/functions/config.example.json
+++ b/FlameZee/functions/config.example.json
@@ -18,7 +18,11 @@
   "emails": {
     "munzeeblog": [
       "example@example.com"
-    ]
+    ],
+    "clanreq": {
+      "key": "XXXXXXXXXXXX",
+      "email": "example@example.com"
+    }
   },
   "bypass_teakens": [
     
