Inventory Fix, Change Clan Requirement Images

--- a/FlameZee/firebase.json
+++ b/FlameZee/firebase.json
@@ -31,6 +31,10 @@
           "destination": "/cuppazeesupport.html"
         },
         {
+          "source": "/requirements/*",
+          "destination": "/missing.png"
+        },
+        {
           "source": "**",
           "function": "api"
         }
