Camps v2 and v3, Activity Filtering

--- a/FlameZee/firebase.json
+++ b/FlameZee/firebase.json
@@ -35,6 +35,14 @@
           "destination": "/missing.png"
         },
         {
+          "source": "/camps/all",
+          "function": "api"
+        },
+        {
+          "source": "/camps/all/*",
+          "function": "api"
+        },
+        {
           "source": "**",
           "function": "api"
         }
