--- a/PaperZee/package.json
+++ b/PaperZee/package.json
@@ -22,7 +22,6 @@
     "@react-navigation/native": "^5.6.1",
     "@react-navigation/stack": "^5.2.11",
     "@ungap/promise-all-settled": "^1.1.0",
-    "axios": "^0.19.2",
     "expo": "^38.0.0",
     "expo-auth-session": "~1.4.0",
     "expo-barcode-scanner": "~8.2.1",
@@ -57,8 +56,7 @@
     "react-navigation-shared-element": "^5.0.0-alpha1",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0",
-    "supercluster": "^7.1.0"
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
