--- a/package.json
+++ b/package.json
@@ -6,18 +6,14 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-
     "deploy-firebase-app": "npm-delay 5000 && firebase deploy --only hosting:app && echo > firebase-debug.log",
     "deploy-firebase": "npm-delay 5000 && firebase deploy --only hosting,functions:api && echo > firebase-debug.log",
-
     "db-build": "node db/build",
     "db-images": "node db/images",
     "db": "yarn db-build && yarn db-images",
-    
     "deploy-web": "expo build:web && firebase deploy --only hosting:app",
     "deploy-mobile": "expo publish --release-channel v1.2",
     "deploy-server": "firebase deploy --only functions:api",
-    
     "deploy-app": "yarn deploy-mobile & yarn deploy-web",
     "deploy": "yarn db && yarn deploy-mobile && expo build:web && firebase deploy --only hosting,functions:api"
   },
@@ -58,6 +54,7 @@
     "react-native-map-clustering": "^3.3.9",
     "react-native-maps": "0.27.1",
     "react-native-paper": "^3.6.0",
+    "react-native-paper-dropdown": "^0.0.3",
     "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "3.0.2",
     "react-native-screens": "~2.9.0",
