--- a/functions/package.json
+++ b/functions/package.json
@@ -15,6 +15,7 @@
     "node": "10"
   },
   "dependencies": {
+    "airtable": "^0.9.0",
     "cheerio": "^1.0.0-rc.3",
     "cors": "^2.8.5",
     "expo-server-sdk": "^3.5.0",
