--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "expo-camera": "~8.3.1",
     "expo-font": "~8.2.1",
     "expo-location": "~8.2.1",
+    "expo-notifications": "~0.3.3",
     "expo-splash-screen": "~0.3.1",
     "expo-web-browser": "~8.3.1",
     "fast-json-stable-stringify": "^2.1.0",
