--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "expo-camera": "~8.3.1",
     "expo-font": "~8.2.1",
     "expo-location": "~8.2.1",
+    "expo-media-library": "~8.2.1",
     "expo-notifications": "~0.3.3",
+    "expo-sharing": "~8.2.1",
     "expo-splash-screen": "~0.3.1",
     "expo-web-browser": "~8.3.1",
     "fast-json-stable-stringify": "^2.1.0",
@@ -54,13 +56,14 @@
     "react-native-gesture-handler": "~1.6.0",
     "react-native-map-clustering": "^3.3.9",
     "react-native-maps": "0.27.1",
-    "react-native-paper": "^4.0.1",
+    "react-native-paper": "^4.1.0",
     "react-native-paper-dropdown": "^0.0.3",
     "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "3.0.2",
     "react-native-screens": "~2.9.0",
     "react-native-shared-element": "0.7.0",
     "react-native-slider": "^0.11.0",
+    "react-native-view-shot": "3.1.2",
     "react-native-web": "~0.11.7",
     "react-native-webview": "9.4.0",
     "react-redux": "^7.2.0",
