--- a/package.json
+++ b/package.json
@@ -58,11 +58,13 @@
     "react-native-maps": "0.27.1",
     "react-native-paper": "^4.1.0",
     "react-native-paper-dropdown": "^0.0.3",
+    "react-native-qrcode-svg": "^6.0.6",
     "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "3.0.2",
     "react-native-screens": "~2.9.0",
     "react-native-shared-element": "0.7.0",
     "react-native-slider": "^0.11.0",
+    "react-native-svg": "12.1.0",
     "react-native-view-shot": "3.1.2",
     "react-native-web": "~0.11.7",
     "react-native-webview": "9.4.0",
