--- a/functions/package.json
+++ b/functions/package.json
@@ -31,6 +31,7 @@
     "nodemailer": "^6.4.8",
     "object.fromentries": "^2.0.2",
     "offline-geocoder": "^1.0.0",
+    "radix-64": "^1.0.4",
     "rss-parser": "^3.9.0",
     "snyk": "^1.339.2",
     "spherical": "^0.2.0",
