Expo 39, Web Scanner

--- a/package.json
+++ b/package.json
@@ -20,54 +20,56 @@
   "dependencies": {
     "@expo-google-fonts/coiny": "^0.1.0",
     "@expo-google-fonts/roboto": "^0.1.0",
-    "@expo/vector-icons": "^10.2.0",
+    "@expo/vector-icons": "^10.0.0",
     "@expo/webpack-config": "^0.12.16",
     "@loadable/component": "^5.12.0",
     "@react-google-maps/api": "^1.9.7",
+    "@react-native-community/async-storage": "~1.12.0",
     "@react-native-community/hooks": "^2.4.8",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-navigation/drawer": "^5.5.0",
-    "@react-navigation/native": "^5.6.1",
-    "@react-navigation/stack": "^5.2.11",
+    "@react-navigation/drawer": "^5.9.0",
+    "@react-navigation/native": "^5.7.3",
+    "@react-navigation/stack": "^5.9.0",
     "@ungap/promise-all-settled": "^1.1.0",
-    "expo": "^38.0.0",
-    "expo-auth-session": "~1.4.0",
-    "expo-barcode-scanner": "~8.2.1",
-    "expo-blur": "~8.1.2",
-    "expo-camera": "~8.3.1",
-    "expo-font": "~8.2.1",
-    "expo-location": "~8.2.1",
-    "expo-media-library": "~8.2.1",
-    "expo-notifications": "~0.3.3",
-    "expo-sharing": "~8.2.1",
-    "expo-splash-screen": "~0.3.1",
-    "expo-web-browser": "~8.3.1",
+    "expo": "^39.0.0",
+    "expo-auth-session": "~1.5.0",
+    "expo-barcode-scanner": "~9.0.0",
+    "expo-blur": "~8.2.0",
+    "expo-camera": "~9.0.0",
+    "expo-font": "~8.3.0",
+    "expo-location": "~9.0.0",
+    "expo-media-library": "~9.2.1",
+    "expo-notifications": "~0.7.2",
+    "expo-permissions": "~9.3.0",
+    "expo-sharing": "~8.4.1",
+    "expo-splash-screen": "~0.6.1",
+    "expo-web-browser": "~8.5.0",
     "fast-json-stable-stringify": "^2.1.0",
     "fuse.js": "^6.0.0",
     "i18next": "^19.4.3",
     "moment": "^2.25.3",
     "moment-timezone": "^0.5.31",
-    "react": "16.11.0",
-    "react-dom": "16.11.0",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
     "react-google-maps": "^9.4.5",
     "react-i18next": "^11.3.5",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.0.tar.gz",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.0.tar.gz",
     "react-native-expo-image-cache": "^4.1.0",
-    "react-native-gesture-handler": "~1.6.0",
+    "react-native-gesture-handler": "~1.7.0",
     "react-native-map-clustering": "^3.3.9",
     "react-native-maps": "0.27.1",
-    "react-native-paper": "^4.1.0",
+    "react-native-paper": "^4.2.0",
     "react-native-paper-dropdown": "^0.0.3",
     "react-native-qrcode-svg": "^6.0.6",
-    "react-native-reanimated": "~1.9.0",
-    "react-native-safe-area-context": "3.0.2",
-    "react-native-screens": "~2.9.0",
+    "react-native-reanimated": "~1.13.0",
+    "react-native-safe-area-context": "3.1.4",
+    "react-native-screens": "~2.10.1",
     "react-native-shared-element": "0.7.0",
     "react-native-slider": "^0.11.0",
     "react-native-svg": "12.1.0",
     "react-native-view-shot": "3.1.2",
-    "react-native-web": "~0.11.7",
-    "react-native-webview": "9.4.0",
+    "react-native-web": "~0.13.7",
+    "react-native-webview": "10.7.0",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
@@ -75,7 +77,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
-    "babel-preset-expo": "^8.2.3",
+    "babel-preset-expo": "^8.3.0",
     "concurrently": "^5.2.0",
     "moment-locales-webpack-plugin": "^1.2.0",
     "webpack-bundle-analyzer": "^3.8.0"
