--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "react-native-slider": "^0.11.0",
     "react-native-svg": "12.1.0",
     "react-native-view-shot": "3.1.2",
-    "react-native-web": "~0.13.7",
+    "react-native-web": "^0.13.14",
     "react-native-webview": "10.7.0",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
