--- a/functions/package.json
+++ b/functions/package.json
@@ -18,6 +18,7 @@
     "airtable": "^0.9.0",
     "cheerio": "^1.0.0-rc.3",
     "cors": "^2.8.5",
+    "csv-stringify": "^5.5.1",
     "expo-server-sdk": "^3.5.0",
     "firebase-admin": "^8.12.1",
     "firebase-functions": "^3.0.0",
